Agregando el header

--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
-
-<!doctype html>
-<html>
-	<head>
-		<title>Git course</title>
-	</head>
-	<body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 	
-		<div>
-			hello world!
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	
+	<title>Invie</title>
 
-		</div>
+	<style media="screen">
+		
+		body {
+			margin: 0;
+		}
 
+		img {
+			max-width: 100%;
+		}
 
-	</body>
-</html>	
+	</style>
+
+</head>
+<body>
+	<img src="header.jpg" alt="">
+</body>
+</html>
