--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 
 </head>
 <body>
-	<img src="header.jpg" alt="">
-	<img src="hero.jpg" alt="">
-	<img src="acustica.webp" alt="">
+	<img src="nueva-version.jpg" alt="">
 </body>
 </html>
